force-app/main/default/objects/Credit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit</relationshipLabel>
    <relationshipName>Credit</relationshipName>
    <type>Lookup</type>
</CustomField>