force-app/main/default/objects/Credit__c/fields/BalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>BalanceAmount__c</fullName>
    <label>Balance Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>