force-app/main/default/objects/Credit__c/fields/CreditAdditionalAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAdditionalAmount__c</fullName>
    <label>Credit Additional Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>