force-app/main/default/objects/Credit__c/fields/CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAmount__c</fullName>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>