force-app/main/default/objects/Credit__c/fields/CreditBasicAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditBasicAmount__c</fullName>
    <label>Credit Basic Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>