force-app/main/default/objects/Credit__c/fields/CreditUsageRate__c.field-meta.xml
<CustomField>
    <fullName>CreditUsageRate__c</fullName>
    <formula>ROUND(((TotalARNet__c + TotalOrderAmountNet__c) / CreditAmount__c) * 100, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Usage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>