force-app/main/default/objects/Credit__c/fields/ExceededDate__c.field-meta.xml
<CustomField>
    <fullName>ExceededDate__c</fullName>
    <label>Exceeded Date</label>
    <type>Date</type>
</CustomField>