force-app/main/default/objects/Credit__c/fields/IsExceeded__c.field-meta.xml
<CustomField>
    <fullName>IsExceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exceeded</label>
    <type>Checkbox</type>
</CustomField>