force-app/main/default/objects/Credit__c/fields/Overdue0105Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue0105Days__c</fullName>
    <label>Overdue 01~05 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>