force-app/main/default/objects/Credit__c/fields/Overdue0615Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue0615Days__c</fullName>
    <label>Overdue 06~15 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>