force-app/main/default/objects/Credit__c/fields/Overdue1630Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue1630Days__c</fullName>
    <label>Overdue 16~30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>