force-app/main/default/objects/Credit__c/fields/OverdueAR__c.field-meta.xml
<CustomField>
    <fullName>OverdueAR__c</fullName>
    <label>Overdue A/R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>