force-app/main/default/objects/Credit__c/fields/OverdueTotal__c.field-meta.xml
<CustomField>
    <fullName>OverdueTotal__c</fullName>
    <label>Overdue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>