force-app/main/default/objects/Credit__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Credit</relationshipLabel>
    <relationshipName>Credit</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>