force-app/main/default/objects/Credit__c/fields/TotalAR__c.field-meta.xml
<CustomField>
    <fullName>TotalAR__c</fullName>
    <label>Total A/R</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>