force-app/main/default/objects/Credit__c/fields/TotalARNet__c.field-meta.xml
<CustomField>
    <fullName>TotalARNet__c</fullName>
    <label>Total A/R (NET)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>