force-app/main/default/objects/Credit__c/fields/TotalOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderAmount__c</fullName>
    <label>Total Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>