force-app/main/default/objects/Credit__c/fields/TotalOrderAmountNet__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderAmountNet__c</fullName>
    <label>Total Order Amount (NET)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>