force-app/main/default/objects/Credit__c/fields/VendorPurchase__c.field-meta.xml
<CustomField>
    <fullName>VendorPurchase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Vendor</label>
    <referenceTo>VendorPurchase__c</referenceTo>
    <relationshipLabel>Credit</relationshipLabel>
    <relationshipName>Credit</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>